<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.clientes.ClientesFragment" >

    <TextView
        android:id="@+id/textView_cli_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/titulo1_clientes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_cli_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/texto1_clientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_cli_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_cli_title" />

    <TextView
        android:id="@+id/textView_cli_title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_seta_servico"
        android:text="@string/titulo2_clientes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_cli_text1"
        app:layout_constraintTop_toBottomOf="@+id/textView_cli_text1" />

    <TextView
        android:id="@+id/textView_cli_title3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_seta_servico"
        android:text="@string/titulo3_clientes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_cli_title2"
        app:layout_constraintTop_toBottomOf="@+id/textView_cli_title2" />

    <TextView
        android:id="@+id/textView_cli_title4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_seta_servico"
        android:text="@string/titulo4_clientes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_cli_title3"
        app:layout_constraintTop_toBottomOf="@+id/textView_cli_title3" />

    <TextView
        android:id="@+id/textView_cli_title5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_seta_servico"
        android:text="@string/titulo5_clientes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_cli_title4"
        app:layout_constraintTop_toBottomOf="@+id/textView_cli_title4" />

    <TextView
        android:id="@+id/textView_cli_title6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_seta_servico"
        android:text="@string/titulo6_clientes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_cli_title5"
        app:layout_constraintTop_toBottomOf="@+id/textView_cli_title5" />

    <TextView
        android:id="@+id/textView_cli_title7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_seta_servico"
        android:text="@string/titulo7_clientes"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_cli_title6"
        app:layout_constraintTop_toBottomOf="@+id/textView_cli_title6" />
</androidx.constraintlayout.widget.ConstraintLayout>